# ppl.kernel.sycl

./: CMakeLists.txt  README.md  pplkernelsycl-config.cmake.in
cmake/: deps.cmake
example/: main.cpp
include/syclkernel/arithmetic/: arithmetic.h
include/syclkernel/common/: device.h  memory.h  types.h
include/syclkernel/nn/: gelu.h  relu.h  silu.h
include/syclkernel/reduce/: reduce.h
include/syclkernel/reformat/: reformat.h
include/syclkernel/unary/: unary.h
src/arithmetic/: add.cpp  div.cpp  mul.cpp  sub.cpp
src/common/: device.cpp  memory.cpp
src/nn/: gelu.cpp  relu.cpp  silu.cpp
src/unary/: abs.cpp
